improve unicode version status bar of tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -120,7 +120,7 @@ set -g status-interval 5
 set -g status-left-length 60
 set -g status-right-length 1000
 set -g status-left ' ❐ #[fg=magenta,bold]#S#[default] ▐ '
-set -g status-right '▐ ♫ #[fg=green]#(mpc current)#[default]▐ ❖ #[fg=magenta,bold]#(load.sh)#[default]▐ ⌚ #[fg=yellow,bold]%a %m/%d %H:%M#[default]▐ #[fg=colour200]@#H#[default]'
+set -g status-right '▐ ♫ #[fg=green]#(mpc current)#[default]▐ ❖ #[fg=magenta,bold]#(load.sh)#[default]▐ ⌚ #[fg=yellow,bold]%a %m/%d %H:%M#[default]▐ #[fg=green]@#H#[default]'
 
 # }}}1
 
