--- a/.irssi/config
+++ b/.irssi/config
@@ -30,9 +30,10 @@ servers = (
   },
   { address = "silc.silcnet.org"; chatnet = "SILC"; port = "706"; },
   {
-    address = "irc.freenode.net";
+    address = "chat.freenode.net";
     chatnet = "IRCnet";
-    port = "6667";
+    # All freenode servers listen on ports 6665, 6666, 6667, 6697 (SSL only), 7000 (SSL only), 7070 (SSL only), 8000, 8001 and 8002. 
+    port = "6665";
     use_ssl = "no";
     ssl_verify = "no";
     autoconnect = "yes";
@@ -323,7 +324,8 @@ settings = {
     #openurl_app_http = "firefox -remote \"ping()\" && firefox -remote \"openURL( $1 )\" || firefox \"$1\" &";
     openurl_app_http = "open $1";
     growl_on_regex = "vincent_wang";
-    growl_icon = "irssi.png";
+    growl_icon = "irssi-flame.png";
+    growl_channel_regex = "0";
   };
 };
 keyboard = (
