--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,12 @@ bind o send-prefix
 
 set -g visual-content on
 set -g display-panes-time 3000
+
+set -g default-terminal "screen-256color"
+
+# C-m means Enter
+setw -g monitor-activity off
+
 # }}}1
 
 # {{{1 key bindings
@@ -120,8 +126,21 @@ set -g status-interval 5
 set -g status-left-length 60
 set -g status-right-length 1000
 set -g status-left ' ❐ #[fg=magenta,bold]#S#[default] ▐ '
-set -g status-right '▐ ♫ #[fg=green]#(mpc current)#[default]▐ ❖ #[fg=magenta,bold]#(load.sh)#[default]▐ ⌚ #[fg=yellow,bold]%a %m/%d %H:%M#[default]▐ #[fg=green]@#H#[default]'
+set -g status-right '▐ ⓔ  #[fg=magenta,bold]#(~/mytools/new_mail.sh)#[default]▐ ♫ #[fg=green]#(mpc current)#[default]▐ ❖ #[fg=magenta,bold]#(load.sh)#[default]▐ ⌚ #[fg=yellow,bold]%a %m/%d %H:%M#[default]▐ #[fg=green]@#H#[default]'
 
 # }}}1
 
-source-file '/Users/vincent/.tmux.conf.local'
+# {{{1 macosx copy/paste wrapper
+# need to compile tmux wrapper script first
+# $ git clone https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard.git 
+# $ cd tmux-MacOSX-pasteboard/ 
+# $ make reattach-to-user-namespace
+# $ sudo mv reattach-to-user-namespace /usr/local/bin
+set -g default-command "reattach-to-user-namespace -l /bin/bash"
+
+#bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+#bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
+
+# }}}1
+
+#source-file '/Users/vincent/.tmux.conf.local'
