update tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,7 @@ set -g bell-action none
 unbind C-b
 bind o send-prefix
 
-set -g visual-content on
+# set -g visual-content on
 set -g display-panes-time 3000
 
 set -g default-terminal "screen-256color"
@@ -17,9 +17,13 @@ set -g default-terminal "screen-256color"
 # C-m means Enter
 setw -g monitor-activity off
 
+set-option -g set-titles on
+set-option -g set-titles-string "#{session_name} - #{host}"
+
 # }}}1
 
 # {{{1 key bindings
+bind c new-window -c "#{pane_current_path}"
 bind C-o last-window
 
 bind k select-pane -U
@@ -55,8 +59,8 @@ bind -r y next-layout
 
 bind '"' choose-window
 bind "'" choose-session
-bind s split-window -h
-bind S split-window -v
+bind s split-window -h -c "#{pane_current_path}"
+bind S split-window -v -c "#{pane_current_path}"
 bind q kill-pane
 bind Q kill-window
 
@@ -109,7 +113,9 @@ set -g display-time 2000
 
 set -g status-utf8 on
 set -g status-bg cyan
-set -g status-interval 5
+# fix tmux slow issue. seems status update will cause too many context switches of notifyd process
+set -g status-interval 0 
+#set -g status-interval 60
 
 #set -g status-fg black 
 #set -g status-bg white
@@ -126,7 +132,8 @@ set -g status-interval 5
 set -g status-left-length 60
 set -g status-right-length 1000
 set -g status-left ' ❐ #[fg=magenta,bold]#S#[default] ▐ '
-set -g status-right '▐ ⓔ  #[fg=magenta,bold]#(~/mytools/new_mail.sh)#[default]▐ ♫ #[fg=green]#(mpc current)#[default]▐ ❖ #[fg=magenta,bold]#(load.sh)#[default]▐ ⌚ #[fg=yellow,bold]%a %m/%d %H:%M#[default]▐ #[fg=green]@#H#[default]'
+set -g status-right '▐ ❖ #[fg=magenta,bold]#(load.sh)#[default]▐ #[fg=yellow,bold]%a %m/%d %H:%M#[default]▐ #[fg=green]@#H#[default]'
+#set -g status-right '▐ ⓔ  #[fg=magenta,bold]#(~/mytools/new_mail.sh)#[default]▐ ♫ #[fg=green]#(mpc current)#[default]▐ ❖ #[fg=magenta,bold]#(load.sh)#[default]▐ ⌚ #[fg=yellow,bold]%a %m/%d %H:%M#[default]▐ #[fg=green]@#H#[default]'
 
 # }}}1
 
@@ -136,7 +143,7 @@ set -g status-right '▐ ⓔ  #[fg=magenta,bold]#(~/mytools/new_mail.sh)#[defaul
 # $ cd tmux-MacOSX-pasteboard/ 
 # $ make reattach-to-user-namespace
 # $ sudo mv reattach-to-user-namespace /usr/local/bin
-set -g default-command "reattach-to-user-namespace -l /bin/bash"
+set -g default-command "tmux rename-window shell; reattach-to-user-namespace -l /bin/bash"
 
 #bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 #bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
