--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,7 +12,9 @@ bind o send-prefix
 # set -g visual-content on
 set -g display-panes-time 3000
 
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
+
+set -g escape-time 10
 
 # C-m means Enter
 setw -g monitor-activity off
@@ -90,7 +92,7 @@ bind-key & command-prompt -p 'join with:' 'join-pane -h -t %%'
 setw -g automatic-rename off
 
 # enable utf8 
-setw -g utf8 on
+# setw -g utf8 on
 
 setw -g xterm-keys on
 
@@ -111,7 +113,7 @@ setw -g window-status-current-attr reverse
 set -g status-keys vi
 set -g display-time 2000
 
-set -g status-utf8 on
+# set -g status-utf8 on
 set -g status-bg cyan
 # fix tmux slow issue. seems status update will cause too many context switches of notifyd process
 set -g status-interval 0 
