--- a/.screenrc
+++ b/.screenrc
@@ -35,10 +35,12 @@ vbell off
 vbell_msg "   Wuff  ----  Wuff!!  "
 
 # define a bigger scrollback, default is 100 lines
-defscrollback 1024
+defscrollback 5000
 
 #run everything in unicode, to allow display of international characters w/o problems
 defutf8 on 
+
+maptimeout 10
 
 # ------------------------------------------------------------------------------
 # SCREEN KEYBINDINGS
