enable tmux-resurrect plugin

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -152,4 +152,8 @@ set -g default-command "tmux rename-window shell; reattach-to-user-namespace -l 
 
 # }}}1
 
+# {{{ tmux plugins 
+run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
+# }}}1
+
 #source-file '/Users/vincent/.tmux.conf.local'
