add mpv submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule ".tmux"]
 	path = .tmux
 	url = git@github.com:linsong/dot_tmux.git
+[submodule ".config/mpv"]
+	path = .config/mpv
+	url = git@github.com:linsong/dot_mpv.git
