--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule ".vifm"]
 	path = .vifm
 	url = git@github.com:linsong/dot_vifm.git
+[submodule ".mutt"]
+	path = .mutt
+	url = git@github.com:linsong/mutt-config.git
