use .mail_config instead of .mutt repo

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,12 +19,12 @@
 [submodule ".vifm"]
 	path = .vifm
 	url = git@github.com:linsong/dot_vifm.git
-[submodule ".mutt"]
-	path = .mutt
-	url = git@github.com:linsong/mutt-config.git
 [submodule ".tmux"]
 	path = .tmux
 	url = git@github.com:linsong/dot_tmux.git
 [submodule ".config/mpv"]
 	path = .config/mpv
 	url = git@github.com:linsong/dot_mpv.git
+[submodule ".mail_config"]
+	path = .mail_config
+	url = git@github.com:linsong/mail_config.git
